--- a/rubik.css
+++ b/rubik.css
@@ -14,7 +14,7 @@ h2{
 }
 div.erdekesseg {
     padding: 5px;
-    background-color: grey;
+    background-color: rgb(146, 140, 140);
 }
 #kozepre{
     text-align: right;
